--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,17 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'war'
+apply plugin: 'net.saliman.cobertura' 
+
+buildscript {
+    repositories {
+        jcenter()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+    }
+    dependencies {
+        classpath 'net.saliman:gradle-cobertura-plugin:2.3.1'
+    }
+}
 
 // In this section you declare where to find the dependencies of your project
 repositories {
