[lwq & zpl] fix the problem that can not found the applicationContext

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 compileTestJava {
 	doLast{
 		copy{
-			from 'src/main/java/'
+			from 'src/main/webapp/WEB-INF'
 			include 'spring-mvc.xml'
 			into 'build/classes/test'
 		}
